[workspace]
members = [
  "client"
]

[package]
name = "telemetry-module"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.4", features = ["macros"] }
dotenv = "0.15.0"
hex = { version = "0.4.3", features = ["serde"] }
log = { version = "0.4.28", features = ["serde"] }
schnorrkel = { version = "0.11.5", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sp-core = "37.0.0"
subxt = { version = "0.44.0", features = ["tokio"] }
subxt-signer = "0.44.0"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit", "tokio"] }
tower-http = { version = "0.6.6", features = ["add-extension", "auth", "compression-full", "cors", "fs", "limit", "set-header", "trace"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "serde", "serde_json"] }

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
dotenv = "0.15.0"
hex = { version = "0.4.3", features = ["serde"] }
log = { version = "0.4.28", features = ["serde"] }
schnorrkel = { version = "0.11.5", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sp-core = "37.0.0"
subxt = { version = "0.44.0", features = ["tokio"] }
subxt-signer = "0.44.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "serde", "serde_json"] }
