[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
hex.workspace = true
iced = { version = "0.13.1", features = ["canvas", "wgpu", "tiny-skia", "fira-sans", "tokio", "lazy", "advanced", "image", "debug"] }
subxt.workspace = true
subxt-signer.workspace = true
