[package]
name = "telemetry-module"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
dotenv.workspace = true
hex.workspace = true
log.workspace = true
schnorrkel.workspace = true
serde.workspace = true
serde_json.workspace = true
sp-core.workspace = true
subxt.workspace = true
subxt-signer.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true